# rambo-bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Procfile  README.md  deploy-commands.js  dev-requirements.txt  go.mod  index.js  main.go  main.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  tsconfig.json
commands/: spam.js
conf/: conf.go
config/: envconf.go  envconfig.go
core/: bot.go  bot.py  config.py  logger.py  msgreply.go
events/: gamenight.go  interaction-create.js  message-create.js  ready.js
slash/: commandhandlers.go  commands.go
src/: index.ts  main.rs
src/commands/: commands.ts  spam.ts
src/events/: interaction-create.ts  ready.ts
src/utils/: logger.ts
utils/: helper.js  logger.js  logger.py  virus-total.js  virustotal.go
